2009-04-29  Mark Rowe  <mrowe@apple.com>

        Ignore the --use-remote-links-to-tests option for GTK as it leads to
        perl errors being spewed at the end of run-webkit-tests.

        * Scripts/run-webkit-tests:

2009-04-29  Mark Rowe  <mrowe@apple.com>

        Implement test-result-archive for GTK.

        * BuildSlaveSupport/test-result-archive:

2009-04-28  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=25462

        Make sure "--pixel --add-platform-exceptions" produces platform
        specific pixel test results.

        * Scripts/run-webkit-tests: Support "--pixel
        --add-platform-exceptions"

2009-04-28  Steve Falkenburg  <sfalken@apple.com>

        Fix link warnings building TestNetscapePlugin on Windows due to mismatched
        DLL name vs. LIBRARY directive name.
        
        Reviewed by Jon Honeycutt.

        * DumpRenderTree/win/TestNetscapePlugin/TestNetscapePlugin.def:
        * DumpRenderTree/win/TestNetscapePlugin/TestNetscapePlugin.vcproj:
        * DumpRenderTree/win/TestNetscapePlugin/TestNetscapePlugin_debug.def: Added.

2009-04-28  Steve Falkenburg  <sfalken@apple.com>

        Fix warnings about PRODUCTION and ARCHIVE_BUILD on Windows builds
        of ImageDiff and DumpRenderTree.
        
        Rubber stamped by Adam Roben.

        * DumpRenderTree/win/DumpRenderTree.vcproj:
        * DumpRenderTree/win/ImageDiff.vcproj:

2009-04-28  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Add ability to get the children count of an AX element.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (getChildrenCountCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::childrenCount):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp: